# Spiral-Pattern-Generator

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  MANUAL.md  README.md  Trunk.toml  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  rust-toolchain.toml  styles.css
.github/: dependabot.yml
.github/workflows/: pages.yml  playwright.yml
src/: lib.rs  protocol.rs  render_data.rs
src/engine/: mod.rs  spatial.rs  state.rs
src/math/: archimedean.rs  circles.rs  constants.rs  hex.rs  mod.rs  point.rs  square.rs  triangle.rs
src/render/: mod.rs
src/ui/: mod.rs
tests/: app.spec.ts
