[package]
name = "spiral-pattern-generator"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
name = "spiral_pattern_generator"
path = "src/lib.rs"

[[bin]]
name = "spg_app"
path = "src/bin/app.rs"

[[bin]]
name = "spg_worker"
path = "src/bin/worker.rs"

[dependencies]
bincode = "1.3.3"
console_error_panic_hook = "=0.1.7"
js-sys = "=0.3.99"
rustc-hash = "=2.1.2"
serde = { version = "=1.0.228", features = ["derive"] }
wasm-bindgen = "=0.2.122"

[dependencies.web-sys]
version = "=0.3.99"
features = [
    "Blob",
    "BlobPropertyBag",
    "CanvasRenderingContext2d",
    "console",
    "CssStyleDeclaration",
    "DedicatedWorkerGlobalScope",
    "DataTransfer",
    "Document",
    "DomRect",
    "DomTokenList",
    "DragEvent",
    "Element",
    "Event",
    "EventTarget",
    "HtmlAnchorElement",
    "HtmlButtonElement",
    "HtmlCanvasElement",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlSelectElement",
    "ImageData",
    "KeyboardEvent",
    "Location",
    "MessageEvent",
    "MouseEvent",
    "Node",
    "Touch",
    "TouchEvent",
    "TouchList",
    "Url",
    "VisualViewport",
    "WebGlRenderingContext",
    "WebGlBuffer",
    "WebGl2RenderingContext",
    "WebGlProgram",
    "WebGlShader",
    "WebGlUniformLocation",
    "WheelEvent",
    "Window",
    "Worker",
]

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
panic = "abort"
